tests/fixtures/errors/invalid_operator.sysml
package Test {
    attribute x = 1 @@ 2;
}
